@@ -736,6 +736,7 @@
     - disabled "-Wdeclaration-after-statement" for Clang since it just warns about backwards compatibility
     - use pre-increment consistently
     - added "hack_str_snapname" for older versions which have the snapname hard-coded to "final.png" with "-str"
+    - removed unnecessary strdup() calls from command_to_argv()
 
     create_report
     - fixed some clang-tidy warnings
